@@ -1,3 +1,5 @@
+April 27, 2016 :: Generalize the SIMD header locator
+April 26, 2016 :: Add-in configure to makefile condition linkage.
 April 26, 2016 :: Add-in a general libpthread locator
 # ~/SCM/argon2> ./argon2 1234567890 -t 7 -p 4 -e
 # IShallBeReleased
